openrem/remapp/static/css/openrem-extra.css
.openrem-toprow {
  padding-top: 15px;
}

table.row-clickable tbody tr td {
  padding: 0;
}

table.row-clickable tbody tr td a {
  display: block;
  padding: 8px;
  color: #000;
}

table.row-clickable tbody tr td a:hover,
table.row-clickable tbody tr td a:focus {
    color: #2a6496;
    text-decoration: underline;
}

table.row-clickable tbody tr th {
    background-color: #d9edf7;
}

a.sorting-option {
    text-decoration: none;
    cursor: pointer;
    cursor: hand;
}

a.no-decoration {
    text-decoration: none;
    color: black;
}

div.ajax-progress {
  position: fixed;
  display: none;
  width: 50px;
  height: 50px;
  top: 25%;
  left: 50%;
  border: none;
}

div.req-hist-norm-btn {
  display: none;
}

div.stu-hist-norm-btn {
  display: none;
}

div.acq-hist-norm-btn {
  display: none;
}

div.acqctdi-hist-norm-btn {
  display: none;
}

div.kvp-hist-norm-btn {
  display: none;
}

div.mas-hist-norm-btn {
  display: none;
}

div.acq-instructions {
  display: block;
}

div.acq-ctdi-instructions {
  display: block;
}

div.stu-instructions {
  display: block;
}

div.req-instructions {
  display: block;
}

div.kvp-instructions {
  display: block;
}

div.mas-instructions {
  display: block;
}

div.ajax-error {
  position: fixed;
  display: none;
  width: 150px;
  top: 25%;
  left: 50%;
  margin-left: -75px;
  border: 1px solid #ccc;
  text-align: center;
  background-color: #eee;
}

div.fullscreen{
  z-index: 9999;
  width: 100%;
  height: 100%;
  min-height: 100%;
  position: fixed;
  top: 0;
  left: 0;
  background-color: #fff;
}
 
.highcharts-tooltip span {
  background-color: white;
  opacity: 1;
  padding: 2px;
  z-index: 9999 !important;
}

div.skinDoseMapGroup {
  position: relative;
  height:420px;
  width: 620px;
}

div.skinDoseMap {
  position: absolute;
  padding: 0px;
  bottom: 0px;
  left: 0px;
}

div.skinDoseMapPerson {
  position: absolute;
  padding: 0px;
  bottom: 0px;
  left: 0px;
  z-index: 10;
}

div.skinMapSaveBtn {
  position: absolute;
  padding: 0px;
  bottom: 5px;
  right: 78px;
  z-index: 10;
}

div.colourScale {
  position: absolute;
  padding: 0px;
  bottom: 0px;
  right: 0px;
  z-index: 10;
}

div.colour_scale_selection {
  position:absolute;
  padding: 5px;
  top: -6px;
  right: -1px;
  background-color: white;
  z-index: 20 !important;
}

input.skinMapControls {
  border: none;
  text-align: right;
}

input.skinMapControlSlider {
}

th.centred  {
  text-align: center;
  vertical-align: middle;
}

td.centred {
  text-align: center;
  vertical-align: middle;
}


input[type=range] {
  -webkit-appearance: none;
  margin: 12px 0;
  width: 100%;
}

input[type=range]::-webkit-slider-runnable-track {
  width: 100%;
  height: 8px;
  cursor: pointer;
  background: #7092be;
  border-radius: 1px;
  border: 0.2px solid #010101;
}
input[type=range]::-webkit-slider-thumb {
  border: 1px solid #000000;
  height: 24px;
  width: 12px;
  border-radius: 3px;
  background: #ffffff;
  cursor: pointer;
  -webkit-appearance: none;
  margin-top: -10px;
}
input[type=range]:focus::-webkit-slider-runnable-track {
  background: #7092be;
}
input[type=range]::-moz-range-track {
  width: 100%;
  height: 8px;
  cursor: pointer;
  background: #7092be;
  border-radius: 1px;
  border: 0.2px solid #010101;
}
input[type=range]::-moz-range-thumb {
  border: 1px solid #000000;
  height: 24px;
  width: 12px;
  border-radius: 3px;
  background: #ffffff;
  cursor: pointer;
}
input[type=range]::-ms-track {
  width: 100%;
  height: 8px;
  cursor: pointer;
  background: transparent;
  border-color: transparent;
  border-width: 12px 0;
  color: transparent;
}
input[type=range]::-ms-fill-lower {
  background: #7092be;
  border: 0.2px solid #010101;
  border-radius: 3px;
}
input[type=range]::-ms-fill-upper {
  background: #7092be;
  border: 0.2px solid #010101;
  border-radius: 3px;
}
input[type=range]::-ms-thumb {
  border: 1px solid #000000;
  height: 24px;
  width: 12px;
  border-radius: 3px;
  background: #ffffff;
  cursor: pointer;
}

